--- a/templates/home.page.html
+++ b/templates/home.page.html
@@ -6,6 +6,9 @@
             <div class="col">
                 <h1>This is the home page</h1>
                 <p>This is some text</p>
+                
+
+                <img src="/static/IMG_5349.jpg">
             </div>
         </div>
     </div>
