Adding html sources

--- a/templates/home.page.html
+++ b/templates/home.page.html
@@ -8,7 +8,7 @@
                 <p>This is some text</p>
                 
 
-                <img src="/static/IMG_5349.jpg">
+                <img src="/static/images/IMG_5349.jpg">
             </div>
         </div>
     </div>
