--- a/templates/make-reservation.page.html
+++ b/templates/make-reservation.page.html
@@ -6,29 +6,62 @@
 
         <div class="row">
             <div class="col">
+            {{$res := index .Data "reservation"}}
             
                 <h1>Make reservation</h1>
+                <p><strong>Reservation Details</strong><br>
+                Room: {{$res.Room.RoomName}}<br>
+                Arrival: {{index .StringMap "start_date"}}<br>
+                Departure: {{index .StringMap "end_date"}}
+                </p>
 
-                <form method="post" action="" class="needs-validation" novalidate>
                 
+
+                <form method="post" action="/make-reservation" class="" novalidate>
+                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+                    <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
+                    <input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}">
+                    <input type="hidden" name="room_id" value="{{$res.RoomID}}">
+
                     <div class="from-group mt-5">
                         <label for="first_name">First name:</label>
-                        <input type="text" name="first_name" id="first_name" class="form-control" required autocomplete="off">
+                        {{with .Form.Errors.Get "first_name"}}
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input type="text" name="first_name" value="{{$res.FirstName}}" id="first_name" 
+                                class="form-control {{with .Form.Errors.Get "first_name"}} is-invalid {{end}}" 
+                                required autocomplete="off">
                     </div>
 
                     <div class="from-group">
                         <label for="last_name">Last name:</label>
-                        <input type="text" name="last_name" id="last_name" class="form-control" required autocomplete="off">
+                        {{with .Form.Errors.Get "last_name"}}
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input type="text" name="last_name" value="{{$res.LastName}}" id="last_name"
+                                class="form-control {{with .Form.Errors.Get "last_name"}} is-invalid {{end}}" 
+                                required autocomplete="off">
                     </div>
+
 
                     <div class="from-group">
                         <label for="email">Email:</label>
-                        <input type="email" name="email" id="email" class="form-control" required autocomplete="off">
+                        {{with .Form.Errors.Get "email"}}
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input type="email" name="email" value="{{$res.Email}}" id="email" 
+                                class="form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}" 
+                                required autocomplete="off">
                     </div>
 
                     <div class="from-group">
                         <label for="phone">Phone:</label>
-                        <input type="text" name="phone" id="phone" class="form-control" required autocomplete="off">
+                        {{with .Form.Errors.Get "phone"}}
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input type="text" name="phone" value="{{$res.Phone}}" id="phone" 
+                                class="form-control {{with .Form.Errors.Get "phone"}} is-invalid {{end}}" 
+                                required autocomplete="off">
                     </div>
 
                     <hr>
