--- a/templates/generals.page.html
+++ b/templates/generals.page.html
@@ -71,6 +71,7 @@
                         const rp = new DateRangePicker(elem, {
                             format: 'yyyy-mm-dd',
                             showOnFocus: true,
+                            minDate: new Date(),
                         })
                     },
 
@@ -87,6 +88,7 @@
                     let form = document.getElementById("check-availability-form");
                     let formData = new FormData(form); // formData contains all the inputs from the form
                     formData.append("csrf_token", "{{.CSRFToken}}");
+                    formData.append("room_id", "1");
                     
                     // fetch for POST
                     fetch('/search-availability-json', {
@@ -95,9 +97,26 @@
                     })
                         .then(response => response.json()) //convert the response to json
                         .then(data => {
-                            console.log(data);
-                            console.log(data.ok);
-                            console.log(data.message);
+                            if (data.ok) {
+                                attention.custom({
+                                    icon: 'success',
+                                    showConfirmButton: false,
+                                    msg: '<p>Room is available!</p>'
+                                        + '<p><a href="/book-room?id='
+                                        + data.room_id
+                                        + '&s='
+                                        + data.start_date
+                                        + "&e="
+                                        + data.end_date
+                                        + '" class="btn btn-primary">'
+                                        + 'Book now!</a><p>',
+                                })
+                            }
+                            else {
+                                attention.error({
+                                    msg: "No availability",
+                                })
+                            }
                         })
                 }
             });
