--- a/templates/home.page.html
+++ b/templates/home.page.html
@@ -51,12 +51,13 @@
             <div class="col">
             <h1 class="text-center mt-4">Welcome to Mo's Hotel!</h1>
                 <p>
-                Your home away from home, set on the majestic waters of the Atlantic Ocean, yhis will be a fantastic memory to be remembered!
-                Your home away from home, set on the majestic waters of the Atlantic Ocean, yhis will be a fantastic memory to be remembered!
-                Your home away from home, set on the majestic waters of the Atlantic Ocean, yhis will be a fantastic memory to be remembered!
-                Your home away from home, set on the majestic waters of the Atlantic Ocean, yhis will be a fantastic memory to be remembered!
-                Your home away from home, set on the majestic waters of the Atlantic Ocean, yhis will be a fantastic memory to be remembered!
-                Your home away from home, set on the majestic waters of the Atlantic Ocean, yhis will be a fantastic memory to be remembered!
+                    Welcome to our charming Airbnb, located in the heart of vibrant Los Angeles! Nestled in a peaceful neighborhood, our home offers a perfect blend of comfort and convenience, allowing you to fully enjoy everything the City of Angels has to offer. With its modern design and cozy atmosphere, our property is an ideal choice for both leisure and business travelers looking for a memorable stay in this bustling metropolis.
+                </p>
+                <p>
+                    Step inside our stylishly decorated home, featuring a spacious living area, fully-equipped kitchen, and luxurious bedrooms designed to provide a restful retreat after a long day exploring LA's iconic attractions. Each room boasts carefully selected furnishings and amenities that ensure a comfortable and relaxing experience for our guests. Whether you're sipping your morning coffee on the private patio or unwinding with your favorite movie, our Airbnb is the perfect home away from home.
+                </p>
+                    Situated in a prime location, our Airbnb grants you easy access to some of Los Angeles' most popular destinations, including Hollywood, Universal Studios, and the famous Santa Monica Pier. Additionally, you'll find an array of trendy restaurants, boutique shops, and cultural hotspots within walking distance. Our dedicated host team is always on hand to provide personalized recommendations, ensuring that your stay is filled with unforgettable experiences that will make you fall in love with Los Angeles.
+                <p>
                 </p>
             </div>
         </div>
