--- a/templates/base.layout.html
+++ b/templates/base.layout.html
@@ -6,33 +6,13 @@
         
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-            <title>My nice page</title>
+            <title>Mo Hotel</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.1/dist/css/datepicker-bs5.min.css">
             <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
             <link rel="stylesheet" type="text/css" href="/static/css/styles.css"> 
         
-            <style>
-                .btn-outline-secondary {
-                    color: aqua;
-                    border-color: #6c757d;
-                }
-                
-                p{
-                
-                }
-                .paraClass{
-                    font-size: 3em;
-                }
-                .secClass{
-                    color: red;
-                }
-
-                #lastPara{
-                    text-decoration: underline;
-                }
-                
-            </style>
+            
             <!-- to implement style to a class, use '.', for paragraph, use p, for div, use div -->
         </head>
 
@@ -40,7 +20,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">&nbsp;</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -96,17 +76,23 @@
 
 
     
-    <div class="row my-footer">
-            <div class="col">
-                Left
+    <footer class="row my-footer">
+        <div class="row">
+            <div class="col text-center">
+                <strong>Mo Hotel </strong><br>
+                1234 S Hope st<br>
+                Los Angeles, California<br>
+                (323)797-6666<br>
+                <a href="mailto:info@moyu.ca">info@moyu.ca</a>
             </div>
             <div class="col">
-                Middle
+                
             </div>
-            <div class="col">
-                Right
+            <div class="col text-center">
+                <strong>Enjoy your trip<br>Enjoy this home</strong>
             </div>
-    </div>
+        </div>
+    </footer>
 
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
