--- a/templates/base.layout.html
+++ b/templates/base.layout.html
@@ -2,160 +2,157 @@
     <!doctype html>
     <html lang="en">
 
-        <head>
-        
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-            <title>Mo Hotel</title>
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.1/dist/css/datepicker-bs5.min.css">
-            <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
-            <link rel="stylesheet" type="text/css" href="/static/css/styles.css"> 
-        
-            
-            <!-- to implement style to a class, use '.', for paragraph, use p, for div, use div -->
-        </head>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <body>
+        <title>Fort Smythe Bed and Breakfast</title>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">&nbsp;</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+              crossorigin="anonymous">
+
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.0/dist/css/datepicker-bs4.min.css">
+        <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
+    </head>
+
+    <body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">&nbsp;</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
+                        <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Rooms
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/generals-quarters">General's Quarters</a></li>
-                        <li><a class="dropdown-item" href="/majors-suite">Major's Suite</a></li>
-
-                    </ul>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            Rooms
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="/generals-quarters">General's Quarters</a></li>
+                            <li><a class="dropdown-item" href="/majors-suite">Major's Suite</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="/search-availability">Book Now</a>
+                        <a class="nav-link" href="/search-availability">Search Availability</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
+                        <a class="nav-link" href="/contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                    {{if eq .IsAuthenticated 1}}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Admin
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/admin/dashboard">Dashboard</a></li>
-                                <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
-
-                            </ul>
-                        </li>
+                        {{if eq .IsAuthenticated 1}}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                           data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            Admin
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="/admin/dashboard">Dashboard</a></li>
+                            <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
+                        </ul>
+                    </li>
                     {{else}}
                         <a class="nav-link" href="/user/login" tabindex="-1" aria-disabled="true">Login</a>
                     {{end}}
                     </li>
                 </ul>
-                </div>
             </div>
-        </nav>
-    
+        </div>
+    </nav>
+
     {{block "content" .}}
 
     {{end}}
 
 
-
-    
     <footer class="row my-footer">
         <div class="row">
             <div class="col text-center">
-                <strong>Mo Hotel </strong><br>
-                1234 S Hope st<br>
-                Los Angeles, California<br>
-                (323)797-6666<br>
-                <a href="mailto:info@moyu.ca">info@moyu.ca</a>
+                <strong>Fort Smythe Bed &amp; Breakfast</strong><br>
+                100 Rocky Road<br>
+                Northbrook, Ontario<br>
+                Canada<br>
+                (416) 555-1212<br>
+                <a href="mailto:info@fsbb.ca">info@fsbb.ca</a>
             </div>
+
             <div class="col">
-                
+
             </div>
+
             <div class="col text-center">
-                <strong>Enjoy your trip<br>Enjoy this home</strong>
+                <strong>Your home away<br>from home</strong>
             </div>
         </div>
     </footer>
 
-    
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.1/dist/js/datepicker-full.min.js"></script>
-    <script src="https://unpkg.com/notie"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/static/js/app.js"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+            crossorigin="anonymous"></script>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.0/dist/js/datepicker-full.min.js"></script>
+    <script src="https://unpkg.com/notie"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="/static/js/app.js"></script>
 
     {{block "js" .}}
 
     {{end}}
 
-
     <script>
         let attention = Prompt();
 
-
-        (() => {
-        'use strict'
-
-        // Fetch all the forms we want to apply custom Bootstrap validation styles to
-        let forms = document.querySelectorAll('.needs-validation')
-
-        // Loop over them and prevent submission
-        Array.from(forms).forEach(form => {
-            form.addEventListener('submit', event => {
-                if (!form.checkValidity()) {
-                    event.preventDefault()
-                    event.stopPropagation()
-                }
-
-                form.classList.add('was-validated')
-            }, false)
-        })
-        })()
-
-        
-
-        
+        (function () {
+            'use strict';
+            window.addEventListener('load', function () {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                let forms = document.getElementsByClassName('needs-validation');
+                // Loop over them and prevent submission
+                Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+        })();
 
 
         function notify(msg, msgType) {
             notie.alert({
-                type: msgType, // optional, default = 4, enum: [1, 2, 3, 4, 5, 'success', 'warning', 'error', 'info', 'neutral']
+                type: msgType,
                 text: msg,
-                stay: false, // optional, default = false
-                time: 3, // optional, default = 3, minimum = 1,
-                position: "top" // optional, default = 'top', enum: ['top', 'bottom']
             })
         }
 
-        function notifyModal(title, text, icon, confirmationButton) {
+        function notifyModal(title, text, icon, confirmationButtonText) {
             Swal.fire({
                 title: title,
                 html: text,
                 icon: icon,
-                confirmButtonText: confirmationButton
+                confirmButtonText: confirmationButtonText
             })
-        
         }
+
         {{with .Error}}
         notify("{{.}}", "error")
         {{end}}
@@ -167,18 +164,9 @@
         {{with .Warning}}
         notify("{{.}}", "warning")
         {{end}}
-
-
-        
-
-
-        
-        
-
     </script>
-
 
     </body>
 
-</html>
+    </html>
 {{end}}
